# LearningCpp

./: .gitignore  .main.cpp.swp  ArraySamples.cpp  Binaries.cpp  CMakeLists-OPENGL.txt  Classes.cpp  CommandLine.cpp  Constants.h  Enums.cpp  Functions.cpp  HeapAndStack.cpp  IfStatement.cpp  InitializerList.cpp  Lambdas.cpp  Math.cpp  Math.h  Namespace.cpp  Pointers.cpp  Quiz.cpp  README.md  Random.cpp  References.cpp  ReturnTypes.cpp  SharedPtr.cpp  SmartPointersAndMove.cpp  String.cpp  Struct.cpp  SwitchStatement.cpp  Template.cpp  Test.cpp  Timer.cpp  TryCatch.cpp  Vectors.cpp  a.out  gcc.MD  gcc.txt  main  main.cpp  playground.cpp  templates.cpp  (+1 more)
MonsterGenerator/: Monster.cpp  Monster.h  MonsterGenerator.cpp  MonsterGenerator.h  main.cpp
MoveByVector/: Point3d.cpp  Point3d.h  Vector3d.cpp  Vector3d.h  main.cpp
oop/CreaturePlayerMonster/: CMakeCache.txt  CMakeLists.txt  Creature.h  Creatures  Monster.cpp  Monster.h  Player.h  main.cpp
oop/DepartamentTeacher/: .ninja_deps  .ninja_log  CMakeLists.txt  Department.h  DepartmentTeacher  build.ninja  cmake_install.cmake  main.cpp  rules.ninja
oop/DepartamentTeachers/: CMakeCache.txt  CMakeLists.txt  Department.cpp  DepartmentTeacher  Teacher.h
oop/Inheritance/: Apple.cpp  Apple.h  CMakeCache.txt  CMakeLists.txt  Fruit.h  Fruits  GrannySmith.h  main.cpp
oop/VirtualFunctions/: Animal.h  Animals  CMakeCache.txt  CMakeLists.txt  Cat.h  CoutOperator.cpp  Cow.h  Dog.h  VirtualClass.cpp  WithoutVirtualClass.cpp  main.cpp
