cmake_minimum_required(VERSION 3.0)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)
set(CMAKE_BUILD_TYPE debug)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++2a")

set(SOURCE_DIR  "${PROJECT_SOURCE_DIR}/")
set(INCLUDE_DIR "${PROJECT_SOURCE_DIR}/")

AUX_SOURCE_DIRECTORY(${SOURCE_DIR} SOURCE_FILES)
AUX_SOURCE_DIRECTORY(${INCLUDE_DIR} HEADER_FILES)
 
include_directories(${INCLUDE_DIR})


project(Fruits)

add_executable(Fruits main.cpp)